[darshan] minor style-bug fixing on mobile screens

--- a/src/components/HomeLands/HomeLands.scss
+++ b/src/components/HomeLands/HomeLands.scss
@@ -48,6 +48,7 @@
       display: flex;
       margin-bottom: 4rem;
       gap: 4rem;
+      flex-wrap: wrap;
       @media screen and (max-width: 1000px) {
         gap: 2rem;
       }
